Added 'greatFilter' arg to 'mastermap' command. Some refactoring.
Refs #494